@@ -26,8 +26,15 @@
 #include <string.h>
 #include <limits.h>
 
+#include "config.h"
+
+#ifdef HAVE_FREETYPE_FREETYPE_H
+#include <freetype/ftxpost.h>
+#include <freetype/ftxerr18.h>
+#else
 #include <ftxpost.h>
 #include <ftxerr18.h>
+#endif
 
 #include "t42.h"
 
